# TryxPS

./: CMakeLists.txt  LICENSE  Makefile  README.md  TryxPS.sln  compile.sh  gdb-compile.sh  main.cpp
cmake/: TryxPSConfigVersion.cmake  TryxPSTargets.cmake
examples/: plugin1.cpp  plugin1.hpp
include/: config.hpp  kernel.hpp  plugin.hpp  plugininterface.hpp  sharedlib.hpp  tryxlist.hpp
src/: kernel.cpp  plugin.cpp
